# an-data-pipeline

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: incremental-refresh.yml  scheduled_pipeline_ir.yml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/macros/: json_extract_if_not_null.sql
dbt/models/: sources.yml
dbt/models/int/: int_acteurs.sql  int_agenda.sql  int_amendements.sql  int_amendements_cosignataires.sql  int_mandats.sql  int_organes.sql  int_pays.sql  int_reunions.sql  int_scrutins.sql  int_scrutins_votes.sql
dbt/models/mart/: mart_check_insert_dates.sql
dbt/models/stg/: stg_acteurs.sql  stg_agenda.sql  stg_amendements.sql  stg_organes.sql  stg_pays.sql  stg_reunions.sql  stg_scrutins.sql
ingestion/: draft.py  run.py
ingestion/config/: config.py  config.yaml
ingestion/datasets/: dataset.py
ingestion/utils/: duck.py  files.py
