[project]
name = "an-data-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "dbt>=1.0.0.40.11",
    "dbt-duckdb>=1.10.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "loguru>=0.7.3",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "polars>=1.35.2",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "ujson>=5.11.0",
]
